added http-test project and more ignore

--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,7 @@
   <artifactId>mfj-tools</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <modules>
+  	<module>http-test</module>
+  </modules>
 </project>
