--- a/http-test/pom.xml
+++ b/http-test/pom.xml
@@ -24,4 +24,12 @@
   	<java.version>1.8</java.version>
   	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-maven-plugin</artifactId>
+  		</plugin>
+  	</plugins>
+  </build>
 </project>
