made 1.0.0 release version

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>net.mfjassociates.tools</groupId>
   <artifactId>mfj-tools</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
   <modules>
   	<module>http-test</module>
