--- a/http-test/pom.xml
+++ b/http-test/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>net.mfjassociates.tools</groupId>
     <artifactId>mfj-tools</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>http-test</artifactId>
   <dependencies>
