--- a/apache-httpclient-resttemplate/pom.xml
+++ b/apache-httpclient-resttemplate/pom.xml
@@ -19,5 +19,9 @@
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.apache.httpcomponents</groupId>
+  		<artifactId>httpclient-win</artifactId>
+  	</dependency>
   </dependencies>
 </project>
