--- a/http-test/src/main/resources/application.properties
+++ b/http-test/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 logging.level.org.apache.http=DEBUG
 logging.level.org.apache.http.wire=ERROR
-logging.level.net.mfjassociates.tools.config.HttpClientConfig=DEBUG
+#logging.level.net.mfjassociates.tools.config.HttpClientConfig=DEBUG
