Added java-chest with Charset stream support for decode/encode

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
   <modules>
   	<module>http-test</module>
   	<module>apache-httpclient-resttemplate</module>
+  	<module>java-chest</module>
   </modules>
 </project>
