improved args checking and logging level setting

--- a/http-test/src/main/resources/application.properties
+++ b/http-test/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 logging.level.org.apache.http=DEBUG
 logging.level.org.apache.http.wire=ERROR
+logging.level.org.springframework.web.client=DEBUG
 #logging.level.net.mfjassociates.tools.config.HttpClientConfig=DEBUG
