--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.4.RELEASE</version>
+    <version>2.1.8.RELEASE</version>
   </parent>
   <groupId>net.mfjassociates.tools</groupId>
   <artifactId>mfj-tools</artifactId>
@@ -13,5 +13,6 @@
   	<module>http-test</module>
   	<module>apache-httpclient-resttemplate</module>
   	<module>java-chest</module>
+  	<module>gifi</module>
   </modules>
 </project>
