--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -29,6 +29,6 @@ jobs:
       run: mvn -B -DskipTests --no-transfer-progress package --file pom.xml
 
     - name: Publish to GitHub Packages Apache Maven
-      run: mvn -B -DskipTests --no-transfer-progress deploy -s $GITHUB_WORKSPACE/settings.xml
+      run: mvn -B -e -DskipTests --no-transfer-progress deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
