--- a/Annotations/pom.xml
+++ b/Annotations/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>net.mfjassociates.tools</groupId>
     <artifactId>mfj-tools</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}.${sha1}${changelist}</version>
   </parent>
   <artifactId>Annotations</artifactId>
   <version>0.0.1-SNAPSHOT</version>
