--- a/apache-httpclient-resttemplate/pom.xml
+++ b/apache-httpclient-resttemplate/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>net.mfjassociates.tools</groupId>
     <artifactId>mfj-tools</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}.${sha1}${changelist}</version>
   </parent>
   <artifactId>apache-httpclient-resttemplate</artifactId>
   <dependencies>
