--- a/http-test/pom.xml
+++ b/http-test/pom.xml
@@ -3,26 +3,27 @@
   <parent>
     <groupId>net.mfjassociates.tools</groupId>
     <artifactId>mfj-tools</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}.${sha1}${changelist}</version>
   </parent>
   <artifactId>http-test</artifactId>
   <dependencies>
   	<dependency>
-  		<groupId>org.springframework</groupId>
-  		<artifactId>spring-web</artifactId>
-  	</dependency>
-  	<dependency>
   		<groupId>org.springframework.boot</groupId>
-  		<artifactId>spring-boot-starter</artifactId>
+  		<artifactId>spring-boot-starter-web</artifactId>
+  		<exclusions>
+  		  <exclusion>
+  		    <groupId>org.springframework.boot</groupId>
+  		    <artifactId>spring-boot-starter-logging</artifactId>
+  		  </exclusion>
+  		</exclusions>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.httpcomponents</groupId>
   		<artifactId>httpclient</artifactId>
   	</dependency>
   	<dependency>
-  		<groupId>net.mfjassociates.tools</groupId>
-  		<artifactId>apache-httpclient-resttemplate</artifactId>
-  		<version>1.0.0</version>
+  	  <groupId>org.springframework.boot</groupId>
+  	  <artifactId>spring-boot-starter-log4j2</artifactId>
   	</dependency>
   </dependencies>
   <properties>
