--- a/java-chest/pom.xml
+++ b/java-chest/pom.xml
@@ -3,10 +3,9 @@
   <parent>
     <groupId>net.mfjassociates.tools</groupId>
     <artifactId>mfj-tools</artifactId>
-    <version>1.0.0</version>
+    <version>${revision}.${sha1}${changelist}</version>
   </parent>
   <artifactId>java-chest</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   <name>Java tool chest</name>
   <description>List of useful java tool classes mostly in the form of helper</description>
   <dependencies>
@@ -24,5 +23,15 @@
   	  <groupId>org.springframework.boot</groupId>
   	  <artifactId>spring-boot-starter-log4j2</artifactId>
   	</dependency>
+  	<dependency>
+  	  <groupId>org.apache.poi</groupId>
+  	  <artifactId>poi-ooxml</artifactId>
+  	  <version>5.2.3</version>
+  	</dependency>
+    <dependency>
+      <groupId>io.github.classgraph</groupId>
+      <artifactId>classgraph</artifactId>
+      <version>4.8.155</version>
+    </dependency>
   </dependencies>
 </project>
