--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>net.mfjassociates.tools</groupId>
   <artifactId>mfj-tools</artifactId>
-  <version>1.0.0</version>
+  <version>${revision}.${sha1}${changelist}</version>
   <packaging>pom</packaging>
   <modules>
   	<module>http-test</module>
@@ -16,4 +16,9 @@
   	<module>gifi</module>
   	<module>Annotations</module>
   </modules>
+  <properties>
+    <revision>2.0</revision>
+    <sha1>0</sha1>
+    <changelist>-SNAPSHOT</changelist>
+  </properties>
 </project>
