--- a/java-chest/pom.xml
+++ b/java-chest/pom.xml
@@ -18,6 +18,7 @@
   	      <artifactId>spring-boot-starter-logging</artifactId>
   	    </exclusion>
   	  </exclusions>
+  	  <scope>test</scope>
   	</dependency>
   	<dependency>
   	  <groupId>org.springframework.boot</groupId>
